--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 }
 
 dependencies {
+    compile 'io.github.novacrypto:BIP39:0.1.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
