--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 
 dependencies {
     compile 'io.github.novacrypto:BIP39:0.1.7'
+    compile 'io.github.novacrypto:BIP32:0.0.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
